syntax = "proto2";

package learn.protobuf;

option optimize_for = SPEED; //优化：默认SPEED
option java_package = "learn.netty.demo.example06_protobuf";
option java_outer_classname = "MyDataInfo2";

message MyMessage {

    enum DataType {
        PersonType = 1;
        DogType = 2;
        CatType = 3;
    }

    required DataType data_type = 1;

    oneof dataBody {
        Person person = 2;
        Dog dog = 3;
        Cat cat = 4;
    }

}

message Person {
    required string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}

message Dog {
    optional string name = 1;
    optional int32 age = 2;
}

message Cat {
    optional string name = 1;
    optional string city = 2;
}